# automatizacion-sri-iva

./: .gitignore  LICENSE  README.md  datos.json.example  main.py  pyproject.toml
.github/workflows/: CI.yaml
src/: declaracion_iva.py
src/pantallas/comun/: logout.py
src/pantallas/formulario_iva/: formulario.py  ids.py  periodo_fiscal.py  preguntas.py
src/pantallas/login/: ids.py  login.py
src/utilidades/: utilidades.py
