[project]
name = "automatizacion-sri-iva"
version = "0.2.0"
authors = [{ name = "luisprgr" }]
description = "App para automatizar la declaración del IVA en el SRI usando selenium"
readme = "README.md"
license = { text = "MIT"}

requires-python = ">=3.13"
dependencies = [
    "selenium>=4.28.1",
]
[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]

[tool.mypy]
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
select = ["ALL"]
fixable = ["ALL"]
unfixable = []
line-length = 90
target-version = "py313"
format.quote-style = "double"
format.indent-style = "space"
